--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    "start": "node app.js --port=$PORT",
+    "start": "node app.js",
     "dev": "env-cmd node app.js"
   },
   "keywords": [],
