--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "mongodb",
   "version": "1.0.0",
   "description": "",
-  "main": "app.js",
+  "main": "index.js",
   "scripts": {
-    "start": "node app.js",
+    "start": "node index.js",
     "dev": "env-cmd node app.js"
   },
   "keywords": [],
