--- a/package.json
+++ b/package.json
@@ -1,14 +1,17 @@
 {
   "name": "mongodb",
   "version": "1.0.0",
-  "description": "",
+  "description": "This is mongodb",
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
     "dev": "env-cmd node app.js"
   },
-  "keywords": [],
-  "author": "",
+  "keywords": [
+    "mongodb",
+    "nodejs"
+  ],
+  "author": "karimroy",
   "license": "ISC",
   "dependencies": {
     "env-cmd": "^10.1.0",
