--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "This is mongodb",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js",
-    "dev": "env-cmd node app.js"
+    "start:pro": "node index.js",
+    "start:dev": "env-cmd node app.js"
   },
   "keywords": [
     "mongodb",
